data/derived/sp14/progs/unify/prog4461.ml.out
Characters 73-75:
  | Sine u -> pi * (eval u)
              ^^
Error: This expression has type float but an expression was expected of type
         int
